# unidep

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  PIP_INDICES_IMPLEMENTATION.md  PIXI_PLAN.md  README.md  bootstrap.ps1  bootstrap.sh  conda_join.py  environment.yaml  pixi_create_sub_lock_file.py  pyproject.toml  requirements_yaml.py  unidep.py
.github/: release.py  use-local-unidep.py
.github/workflows/: documentation-links.yml  install-example-projects.yml  pip-install.yml  pytest.yml  release.yml  toc.yaml  update-readme.yml
docs/: Makefile  requirements.txt
docs/source/: .gitignore  FAQ.md  README.md  conf.py  index.md
docs/source/reference/: index.md  unidep.md  unidep.platform_definitions.md  unidep.rst  unidep.utils.md  unidep.utils.rst
example/: README.md  conda-lock.yml  environment.yaml
example/hatch2_project/: README.md  pyproject.toml
example/hatch_project/: README.md  pyproject.toml  requirements.yaml
example/poetry_project/: pyproject.toml  requirements.yaml
example/project1/: conda-lock.yml  pyproject.toml  requirements.yaml  setup.py
example/project2/: conda-lock.yml  pyproject.toml  requirements.yaml
example/project3/: conda-lock.yml  pyproject.toml  requirements.yaml
example/pypi_alternatives_example/: requirements.yaml
example/pyproject_toml_project/: README.md  pyproject.toml
example/setup_py_project/: README.md  pyproject.toml  requirements.yaml  setup.py
example/setuptools_project/: README.md  pyproject.toml  requirements.yaml
tests/: __init__.py  helpers.py  test_artifact_metadata.py  test_cli.py  test_cli_install_conda_lock.py  test_conda_join.py  test_conda_lock.py  test_conda_merge.py  test_dependencies_parsing_internal.py  test_dependency_selection.py  test_doctor.py  test_hatch_build_hook.py  test_index_install.py  test_local_wheels_and_zip.py  test_parse_yaml_includes.py  test_parse_yaml_local_dependencies.py  test_parse_yaml_nested_local_dependencies.py  test_pip_indices.py  test_pip_indices_cli.py  test_pip_indices_integration.py  test_pixi.py  test_pixi_lock.py  test_pixi_to_conda_lock.py  test_project_dependency_handling.py  test_pypi_alternatives.py  test_pypi_alternatives_errors.py  test_pypi_alternatives_integration.py  test_requirements_yaml.py  test_setuptools_integration.py  test_unidep.py  test_utils.py  test_version_conflicts.py
tests/shared_local_install_monorepo/project1/: pyproject.toml  requirements.yaml
tests/shared_local_install_monorepo/project2/: pyproject.toml  requirements.yaml
tests/shared_local_install_monorepo/shared/: pyproject.toml  requirements.yaml
tests/simple_monorepo/: common-requirements.yaml  conda-lock.yml  pixi.toml
tests/simple_monorepo/project1/: conda-lock.yml  requirements.yaml
tests/simple_monorepo/project2/: conda-lock.yml  requirements.yaml
tests/test-pip-and-conda-different-name/: conda-lock.yml
tests/test-pip-and-conda-different-name-on-linux-64/: requirements.yaml
tests/test-pip-and-conda-different-name/project1/: requirements.yaml
tests/test-pip-and-conda-different-name/project2/: requirements.yaml
tests/test-pip-package-with-conda-dependency/: conda-lock.yml
tests/test-pip-package-with-conda-dependency/project1/: requirements.yaml
tests/test-pip-package-with-conda-dependency/project2/: requirements.yaml
tests/test_pypi_alternatives/: test_all_scenarios.sh
tests/test_pypi_alternatives/main_app/: pyproject.toml
tests/test_pypi_alternatives/main_app/main_app/: __init__.py
tests/test_pypi_alternatives/shared_lib/: pyproject.toml
tests/test_pypi_alternatives/shared_lib/shared_lib/: __init__.py
unidep/: __init__.py  _artifact_metadata.py  _build_system_integration.py  _cli.py  _conda_env.py  _conda_lock.py  _conflicts.py  _dependencies_parsing.py  _dependency_selection.py  _doctor.py  _hatch_integration.py  _index_install.py  _pixi.py  _pixi_lock.py  _poetry_integration.py  _pytest_plugin.py  _setuptools_integration.py  _version.py  _yaml_parsing.py  base.py  cli.py  pixi_to_conda_lock.py  platform_definitions.py  pytest_plugin.py  utils.py
