[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conda_join"
description = "Unified Conda and Pip requirements management."
version = "0.1.0"
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
dependencies = []
requires-python = ">=3.7"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/basnijholt/conda_join"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "coverage", "pytest-cov", "pytest-mock"]

[project.scripts]
conda_join = "conda_join:main"

[tool.setuptools]
py-modules = ["conda_join"]

[tool.pytest.ini_options]
addopts = """
    --cov=conda_join
    --cov-report term
    --cov-report html
    --cov-fail-under=70
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line_length = 88

[tool.ruff]
line-length = 150
target-version = "py37"
select = ["ALL"]
ignore = [
    "T20",     # flake8-print
    "ANN101",  # Missing type annotation for {name} in method
    "S101",    # Use of assert detected
    "PD901",   # df is a bad variable name. Be kinder to your future self.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "D402",    # First line should not be the function's signature
    "PLW0603", # Using the global statement to update `X` is discouraged
    "D401",    # First line of docstring should be in imperative mood
    "SLF001",  # Private member accessed
]

[tool.ruff.per-file-ignores]
"tests/*" = ["SLF001", "D103"]
"tests/test_examples.py" = ["E501"]
".github/*" = ["INP001"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.7"
