[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unidep"
description = "Unified Conda and Pip requirements management."
dynamic = ["version"]
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
dependencies = ["ruamel.yaml", "typing_extensions; python_version < '3.8'"]
requires-python = ">=3.7"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/basnijholt/unidep"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "coverage", "pytest-cov", "pytest-mock"]

[project.scripts]
unidep = "unidep:main"

[project.entry-points."setuptools.finalize_distribution_options"]
unidep = "unidep:setuptools_finalizer"

[tool.setuptools]
py-modules = ["unidep"]

[tool.setuptools.dynamic]
version = {attr = "unidep.__version__"}

[tool.pytest.ini_options]
addopts = """
    --cov=unidep
    --cov-report term
    --cov-report html
    --cov-fail-under=95
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py37"
select = ["ALL"]
ignore = [
    "T20",     # flake8-print
    "ANN101",  # Missing type annotation for {name} in method
    "S101",    # Use of assert detected
    "PD901",   # df is a bad variable name. Be kinder to your future self.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "D402",    # First line should not be the function's signature
    "PLW0603", # Using the global statement to update `X` is discouraged
    "D401",    # First line of docstring should be in imperative mood
    "SLF001",  # Private member accessed
]

[tool.ruff.per-file-ignores]
"tests/*" = ["SLF001", "D103", "E501"]
"tests/test_examples.py" = ["E501"]
".github/*" = ["INP001"]
"example/*" = ["INP001", "D100"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.7"

# Use bump-my-version, e.g., call `bump-my-version bump minor`
[tool.bumpversion]
current_version = "0.22.0"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "unidep.py"
replace = '__version__ = "{new_version}"'
search = '__version__ = "{current_version}"'
