[build-system]
requires = ["setuptools", "unidep"]
build-backend = "setuptools.build_meta"

[project]
name = "hatch_project"
description = "Example hatch_project for `unidep`."
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
# `dependencies` is not needed because it is automatically
# populated by `unidep` with the dependencies from the `requirements.yaml`
# dependencies = []
dynamic = ["dependencies"]
version = "0.1.0"

[tool.setuptools]
py-modules = ["hatch_project"]
