[build-system]
requires = ["hatchling", "unidep"]
build-backend = "hatchling.build"

[project]
name = "hatch_project"
description = "Example hatch_project for `unidep`."
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
# `dependencies` is not needed because it is automatically
# populated by `unidep` with the dependencies from the `requirements.yaml`
# dependencies = []
dynamic = ["dependencies", "optional-dependencies"]
version = "0.1.0"

[tool.hatch]

[tool.hatch.metadata.hooks.unidep]
