[build-system]
requires = ["poetry-core>=1.0.0", "unidep @ file://localhost/Users/basnijholt/Code/unidep"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "poetry_project"
version = "0.1.0"
description = "Example poetry_project for `unidep`."
authors = ["Bas Nijholt <bas@nijho.lt>"]

# `dependencies` is not needed because it is automatically
# populated by `unidep` with the dependencies from the `requirements.yaml`
# [tool.poetry.dependencies]
