[build-system]
requires = ["setuptools", "unidep"]
build-backend = "setuptools.build_meta"

[project]
name = "project2"
description = "Example project2 for `unidep`."
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
# `dependencies` is not needed because it is automatically
# populated by `unidep` with the dependencies from the `requirements.yaml`
# dependencies = []
version = "0.1.0"

[tool.setuptools]
py-modules = ["project2"]
