[build-system]
requires = ["setuptools", "unidep"]
build-backend = "setuptools.build_meta"

[project]
name = "project3"
description = "Example project3 for `unidep`."
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
# `dependencies` is not needed because it is automatically
# populated by `unidep` with the dependencies from the `requirements.yaml`
# dependencies = []
dynamic = ["dependencies"]
version = "0.1.0"

[tool.setuptools]
py-modules = ["project3"]
