[build-system]
requires = ["setuptools", "unidep[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_project"
description = "Example setuptools_project for `unidep`."
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
# `dependencies` is not needed because it is automatically
# populated by `unidep` with the dependencies defined in the [tool.unidep] section!
# dependencies = []
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = ["setuptools_project"]

[tool.unidep]
channels = ["conda-forge"]
dependencies = [
    "adaptive",
    "pfapack:linux64",
    "pipefunc",
    { pip = "markdown-code-runner" },
    { pip = "home-assistant-streamdeck-yaml" },
]
includes = [
    "../hatch_project",
]
