[build-system]
requires = ["setuptools", "unidep"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools_project"
description = "Example setuptools_project for `unidep`."
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
# `dependencies` is not needed because it is automatically
# populated by `unidep` with the dependencies from the `requirements.yaml`
# dependencies = []
version = "0.1.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["setuptools_project"]
